maybe fixed overflow this time

--- a/Portfolio Files/Portfolio Website/styles/mainStyles.css
+++ b/Portfolio Files/Portfolio Website/styles/mainStyles.css
@@ -10,6 +10,7 @@ body
 {
     width: 100vw;
     overflow-x: none;
+    position: relative
 }
 
 h1 {
